--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -347,8 +347,17 @@
     "message": "호스팅",
     "description": "Tracker category name"
   },
+  "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
+    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+  },
   "ignore": {
     "message": "무시"
+  },
+  "include_a_screenshot_of_the_current_page": {
+    "message": "Include a screenshot of the current page"
+  },
+  "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
+    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "<a href=\"$${0}\">웹 상 트래커</a>, <a href=\"$${1}\">애드온의 상태</a> 및 <a href=\"$${2}\">성능 측정</a>에 대한 정보는 Ghostery 커뮤니티의 개인정보 보호를 향상하기 위해 당사의 <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">개인정보 보호정책</a>에 따라 공유됩니다.",
@@ -392,6 +401,9 @@
   },
   "manifest_short_description": {
     "message": "강력하고 사용하기 쉬운 개인정보 보호 확장 프로그램. 광고와 트래커를 차단해 웹 서핑을 빠르게 해보세요."
+  },
+  "many_thanks_for_your_report_": {
+    "message": "Many thanks for your report!"
   },
   "menu": {
     "message": "메뉴"
@@ -536,6 +548,9 @@
   "select_time_frame": {
     "message": "시간 선택"
   },
+  "send": {
+    "message": "보내기 "
+  },
   "send_feedback": {
     "message": "피드백 보내기"
   },
@@ -573,6 +588,9 @@
   },
   "software_licenses": {
     "message": "소프트웨어 라이선스"
+  },
+  "something_wrong_": {
+    "message": "Something wrong?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "페이지 이동 통계 보고서"
@@ -733,6 +751,9 @@
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "이제 검색 결과 옆에 트래커 휠을 더 이상 표시하지 않습니다."
+  },
+  "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
+    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
   },
   "your_privacy_features_": {
     "message": "현재 개인정보 보호 기능"
