--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Wenn das Problem weiterhin besteht oder du eine andere Seite als defekt melden möchtest, verwende bitte das Meldeformular auf <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Ignorieren"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Füge einen Screenshot der aktuellen Seite ein"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Melde uns eine kaputte Seite. Wir schauen es uns gerne an und beheben das Problem."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Informationen über <a href=\"$${0}\">Web-Tracker</a>, <a href=\"$${1}\">Zustand des Add-ons</a> und <a href=\"$${2}\">Leistungstelemetrie</a> werden gemäß unserer <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Datenschutzerklärung</a> geteilt, um die Privatsphäre der ganzen Ghostery-Community zu verbessern.",
@@ -403,7 +403,7 @@
     "message": "Leistungsstark und benutzerfreundlich: Blockiere Werbung, Tracker und beschleunige Seiten mit der Ghostery Datenschutz-Erweiterung."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Vielen Dank für deinen Bericht!"
   },
   "menu": {
     "message": "Menü"
@@ -590,7 +590,7 @@
     "message": "Software-Lizenzen"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Etwas nicht in Ordnung?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "Statistische Berichte über Navigationsrouten"
@@ -753,7 +753,7 @@
     "message": "Neben den Suchergebnissen werden keine Tracker-Räder mehr angezeigt."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Dein Beitrag hilft, ein privateres und sichereres Internet für die gesamte Ghostery-Community aufzubauen."
   },
   "your_privacy_features_": {
     "message": "Ihre Datenschutzfunktionen:"
