--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Si el problema persiste o desea informar sobre una página diferente como rota, utilice el formulario de informe en <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Ignorar"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Incluye una captura de pantalla de la página actual"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Infórmanos sobre una página con problemas, estaremos encantados de investigar y solucionar."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Información sobre <a href=\"$${0}\">rastreadores web</a>, <a href=\"$${1}\">salud de los complementos</a> y <a href=\"$${2}\">telemetría de rendimiento</a> se compartirá de acuerdo con nuestra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, avanzando en la protección de la privacidad para la comunidad de Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Potente y fácil de usar extensión de privacidad. Bloquea anuncios, rastreadores y acelera tu navegación web."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "¡Muchas gracias por tu informe!"
   },
   "menu": {
     "message": "Menú"
@@ -590,7 +590,7 @@
     "message": "Licencias de software"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "¿Algo va mal?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "informes estadísticos sobre rutas de navegación"
@@ -753,7 +753,7 @@
     "message": "Ya no verás las ruedas de los rastreadores junto a los resultados de búsqueda."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Tu contribución ayuda a construir un internet más privado y seguro para toda la comunidad de Ghostery."
   },
   "your_privacy_features_": {
     "message": "Tus funciones de privacidad:"
