--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Se o problema persistir ou se você quiser relatar uma página diferente como quebrada, use o formulário de relatório em <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Ignorar"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Inclua uma captura de tela da página atual"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Informe-nos sobre uma página com problemas, ficaremos felizes em investigar e corrigir."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Informações sobre <a href=\"$${0}\">rastreadores da web</a>, <a href=\"$${1}\">saúde dos complementos</a> e <a href=\"$${2}\">telemetria de desempenho</a> serão compartilhadas de acordo com nossa <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidade</a>, avançando na proteção de privacidade para a comunidade Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Extensão de privacidade poderosa e fácil de usar. Bloqueie anúncios, rastreadores e acelere sua navegação na web."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Muito obrigado pelo seu relatório!"
   },
   "menu": {
     "message": "Menu"
@@ -590,7 +590,7 @@
     "message": "Licenças de software"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Algo errado?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "relatórios estatísticos sobre rotas de navegação"
@@ -753,7 +753,7 @@
     "message": "Você não verá mais rodas de rastreadores ao lado dos resultados de pesquisa."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Sua contribuição ajuda a construir uma internet mais privada e segura para toda a comunidade Ghostery."
   },
   "your_privacy_features_": {
     "message": "Seus recursos de privacidade:"
