--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Si le problème persiste ou si vous souhaitez signaler une autre page comme étant défectueuse, veuillez utiliser le formulaire de signalement sur <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Ignorer"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Inclure une capture d'écran de la page actuelle"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Informez-nous d'une page défectueuse, nous serons heureux d'enquêter et de corriger."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Informations sur les <a href=\"$${0}\">trackers web</a>, la <a href=\"$${1}\">santé des extensions</a> et la <a href=\"$${2}\">télémétrie de performance</a> seront partagées conformément à notre <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Politique de Confidentialité</a>, renforçant la protection de la vie privée pour la communauté Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Extension de confidentialité puissante et facile à utiliser. Bloquez les publicités, les trackers et accélérez votre navigation."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Merci beaucoup pour votre rapport !"
   },
   "menu": {
     "message": "Menu"
@@ -590,7 +590,7 @@
     "message": "Licences d'utilisation de logiciels"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Quelque chose ne va pas ?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "rapports statistiques sur les itinéraires de navigation"
@@ -753,7 +753,7 @@
     "message": "Vous ne verrez plus de camembert des trackers à côté des résultats de recherche."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Votre contribution aide à construire un internet plus privé et sécurisé pour toute la communauté Ghostery."
   },
   "your_privacy_features_": {
     "message": "Vos fonctions de confidentialité :"
