--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Se il problema persiste o desideri segnalare un'altra pagina come non funzionante, utilizza il modulo di segnalazione su <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Ignora"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Includi uno screenshot della pagina corrente"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Informaci di un problema con una pagina, saremo felici di indagare e risolverlo."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Informazioni sui <a href=\"$${0}\">tracker web</a>, sulla <a href=\"$${1}\">salute degli add-on</a> e sulla <a href=\"$${2}\">telemetria delle prestazioni</a> saranno condivise in conformità con la nostra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Informativa sulla privacy</a>, migliorando la protezione della privacy per la comunità Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Potente ed intuitiva estensione per la privacy. Blocca annunci, Tracker e accelera il tuo web."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Molte grazie per il tuo rapporto!"
   },
   "menu": {
     "message": "Menu"
@@ -590,7 +590,7 @@
     "message": "Licenze Software"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Qualcosa non va?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "rapporti statistici sui percorsi di navigazione"
@@ -753,7 +753,7 @@
     "message": "Non vedrai più le ruote del tracker vicino ai risultati della ricerca."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Il tuo contributo aiuta a costruire un internet più privato e sicuro per l'intera comunità di Ghostery."
   },
   "your_privacy_features_": {
     "message": "Le tue funzioni privacy:"
