--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "문제가 계속되거나 다른 페이지가 깨진 것으로 보고하려면 <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>의 보고 양식을 사용하세요."
   },
   "ignore": {
     "message": "무시"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "현재 페이지의 스크린샷을 포함하세요"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "페이지 오류 경험을 알려주시면, 저희가 조사하고 수정하겠습니다."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "<a href=\"$${0}\">웹 상 트래커</a>, <a href=\"$${1}\">애드온의 상태</a> 및 <a href=\"$${2}\">성능 측정</a>에 대한 정보는 Ghostery 커뮤니티의 개인정보 보호를 향상하기 위해 당사의 <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">개인정보 보호정책</a>에 따라 공유됩니다.",
@@ -403,7 +403,7 @@
     "message": "강력하고 사용하기 쉬운 개인정보 보호 확장 프로그램. 광고와 트래커를 차단해 웹 서핑을 빠르게 해보세요."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "보고해 주셔서 감사합니다!"
   },
   "menu": {
     "message": "메뉴"
@@ -590,7 +590,7 @@
     "message": "소프트웨어 라이선스"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "문제가 있나요?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "페이지 이동 통계 보고서"
@@ -753,7 +753,7 @@
     "message": "이제 검색 결과 옆에 트래커 휠을 더 이상 표시하지 않습니다."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "당신의 기여는 전체 Ghostery 커뮤니티를 위한 더 사적이고 안전한 인터넷을 구축하는 데 도움이 됩니다."
   },
   "your_privacy_features_": {
     "message": "현재 개인정보 보호 기능"
