--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Jeśli problem będzie się powtarzał lub chcesz zgłosić inną stronę jako uszkodzoną, skorzystaj z formularza na <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Zignoruj"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Dołącz zrzut ekranu bieżącej strony"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Poinformuj nas o problemach z działaniem strony, chętnie to zbadamy i naprawimy."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Informacje o <a href=\"$${0}\">trackerach</a>, <a href=\"$${1}\">stanie rozszerzenia i <a href=\"$${2}\">telemetrii wydajności</a> będą udostępniane zgodnie z naszą <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, co przyczynia się do zwiększenia ochrony prywatności społeczności Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Potężne i łatwe w użyciu rozszerzenie do ochrony prywatności. Blokuj reklamy, trackery i przyspiesz swoje przeglądanie internetu."
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Wielkie dzięki za Twój raport!"
   },
   "menu": {
     "message": "Menu"
@@ -590,7 +590,7 @@
     "message": "Licencje na oprogramowanie"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Coś nie tak?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "statystyczne raporty dotyczące tras nawigacyjnych"
@@ -753,7 +753,7 @@
     "message": "Wykresy kołowe z trackerami nie będą wyświetlane obok wyników wyszukiwania."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Twój wkład pomaga budować bardziej prywatny i bezpieczny internet dla całej społeczności Ghostery."
   },
   "your_privacy_features_": {
     "message": "Twoje funkcje prywatności:"
