--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -348,16 +348,16 @@
     "description": "Tracker category name"
   },
   "if_the_issue_persists_or_you_d_like_to_report_a_different_page_as_broken__please_use_the_report_form_on__a_href__@_0___onclick____1___ghostery_com__a__": {
-    "message": "If the issue persists or you’d like to report a different page as broken, please use the report form on <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
+    "message": "Если проблема сохраняется или вы хотите сообщить о другой неработающей странице, пожалуйста, используйте форму отчета на <a href=\"$${0}\" onclick=\"$${1}\">ghostery.com</a>."
   },
   "ignore": {
     "message": "Игнорировать"
   },
   "include_a_screenshot_of_the_current_page": {
-    "message": "Include a screenshot of the current page"
+    "message": "Включите снимок текущей страницы"
   },
   "inform_us_about_a_broken_page_experience__we_re_happy_to_investigate_and_fix_": {
-    "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
+    "message": "Сообщите нам о проблемах с отображением страницы, мы с радостью разберемся и исправим."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
     "message": "Информация о <a href=\"$${0}\">веб-трекерах</a>, <a href=\"$${1}\">состоянии дополнения</a> и <a href=\"$${2}\">телеметрии производительности</a> будет передаваться в соответствии с нашей <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Политикой конфиденциальности</a>, способствуя усилению защиты конфиденциальности для сообщества Ghostery.",
@@ -403,7 +403,7 @@
     "message": "Мощное расширение для защиты конфиденциальности, которое блокирует рекламу, предотвращает трекеры и ускоряет загрузку веб-сайтов"
   },
   "many_thanks_for_your_report_": {
-    "message": "Many thanks for your report!"
+    "message": "Большое спасибо за ваш отчет!"
   },
   "menu": {
     "message": "Меню"
@@ -590,7 +590,7 @@
     "message": "Лицензии на программное обеспечение"
   },
   "something_wrong_": {
-    "message": "Something wrong?"
+    "message": "Что-то не так?"
   },
   "statistical_reports_on_navigational_routes": {
     "message": "статистические отчеты о навигационных маршрутах"
@@ -753,7 +753,7 @@
     "message": "Вы больше не будете видеть статистику трекера рядом с результатами поиска."
   },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
-    "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
+    "message": "Ваш вклад помогает создать более приватный и безопасный интернет для всей сообщества Ghostery."
   },
   "your_privacy_features_": {
     "message": "Ваши функции защиты конфиденциальности:"
